log/build_2021-06-01_11-19-48/inv_kinematics_pkg/stdout_stderr.log
-- Found ament_cmake: 0.9.8 (/opt/ros/foxy/share/ament_cmake/cmake)
-- Using PYTHON_EXECUTABLE: /usr/bin/python3
-- Found rclcpp: 2.3.1 (/opt/ros/foxy/share/rclcpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Found rosidl_adapter: 1.2.1 (/opt/ros/foxy/share/rosidl_adapter/cmake)
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 1.0.3 (/opt/ros/foxy/share/rmw_implementation_cmake/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found interfaces: 0.0.0 (/home/javierfr/Tesis_ws/V1/install/interfaces/share/interfaces/cmake)
-- Found geometry_msgs: 2.0.4 (/opt/ros/foxy/share/geometry_msgs/cmake)
-- Configuring done
-- Generating done
-- Build files have been written to: /home/javierfr/Tesis_ws/V1/build/inv_kinematics_pkg
[35m[1mScanning dependencies of target platform1_vel[0m
[ 50%] [32mBuilding CXX object CMakeFiles/platform1_vel.dir/src/platform1_vel.cpp.o[0m
/home/javierfr/Tesis_ws/V1/src/inv_kinematics_pkg/src/platform1_vel.cpp: In constructor ‘Platform1Vel::Platform1Vel()’:
/home/javierfr/Tesis_ws/V1/src/inv_kinematics_pkg/src/platform1_vel.cpp:15:23: error: ‘Platform1VelServer’ has not been declared
   15 |     "platform1_vel", &Platform1VelServer::send_vel);
      |                       ^~~~~~~~~~~~~~~~~~
/home/javierfr/Tesis_ws/V1/src/inv_kinematics_pkg/src/platform1_vel.cpp: In member function ‘void Platform1Vel::send_vel(std::shared_ptr<interfaces::srv::PlatformVel_Request_<std::allocator<void> > >, std::shared_ptr<interfaces::srv::PlatformVel_Response_<std::allocator<void> > >)’:
/home/javierfr/Tesis_ws/V1/src/inv_kinematics_pkg/src/platform1_vel.cpp:47:6: error: ‘publisher_M1’ was not declared in this scope
   47 |      publisher_M1->publish(vel_M1);
      |      ^~~~~~~~~~~~
make[2]: *** [CMakeFiles/platform1_vel.dir/build.make:63: CMakeFiles/platform1_vel.dir/src/platform1_vel.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/platform1_vel.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
